--- a/KUBERNETES_Scripts/init/ns-create.yaml.tmpl
+++ b/KUBERNETES_Scripts/init/ns-create.yaml.tmpl
@@ -19,9 +19,14 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
     rbac.authorization.k8s.io/aggregate-to-admin: "false"
 rules:
-  - apiGroups: [""]
-    resources: ["*"]
-    verbs: ["*"]
+- apiGroups: ["", "extensions", "apps"]
+  resources: ["*"]
+  verbs: ["*"]
+- apiGroups: ["batch"]
+  resources:
+  - jobs
+  - cronjobs
+  verbs: ["*"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -30,9 +35,9 @@ metadata:
   name: NAME-ENV-controller
   namespace: NAME-ENV
 subjects:
-  - kind: ServiceAccount
-    name: NAME-ENV-sa
-    namespace: NAME-ENV
+- kind: ServiceAccount
+  name: NAME-ENV-sa
+  namespace: NAME-ENV
 roleRef:
   kind: ClusterRole
   name: NAME-ENV-controller
